<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".Fragments.DetailsFragment">

    <TextView
        android:id="@+id/tvKnowMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="@font/baloo"
        android:padding="16dp"
        android:text="@string/know_more_about_the_movie"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMoviePoster"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKnowMore"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/movie_poster" />

    <Button
        android:id="@+id/btnWathcTrailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:fontFamily="@font/headland_one"
        android:text="@string/watch_trailer"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/clMinuteDetails"
        app:layout_constraintTop_toBottomOf="@+id/ivMoviePoster" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMinuteDetails"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btnWathcTrailer">

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai_2"
            android:paddingStart="8dp"
            android:paddingBottom="8dp"
            android:text="Movie Name"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMovieCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:paddingStart="8dp"
            android:paddingBottom="8dp"
            android:text="Category"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieName" />

        <TextView
            android:id="@+id/tvMovieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/adamina"
            android:paddingStart="8dp"
            android:paddingBottom="8dp"
            android:text="@string/release_date"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvMovieCategory"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/clMinuteDetails"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvMovieDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:scrollbars="vertical"
            android:text="@string/movie_description"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>